# sahayak

./: .env.example  .gitignore  .vercelignore  README.md  adversarial-evaluation.tex  chat-log-report.tex  pyproject.toml  render.yaml  requirements.txt  vercel.json
api/: index.py
chat-logs/: kaggle-parsing.md  master-framework.md  part1-chats.md  part2-chats.md  qa-audit.md
docs/: ADVERSARIAL-TESTS.md  QUICK-START.md  README.md  project-overview.md
parsed_schemes/: BATCH_INDEX.json  STATISTICS.json  kaggle_schemes_batch_001.json  kaggle_schemes_batch_002.json  kaggle_schemes_batch_003.json  kaggle_schemes_batch_004.json  kaggle_schemes_batch_005.json  kaggle_schemes_batch_006.json  kaggle_schemes_batch_007.json  kaggle_schemes_batch_008.json  kaggle_schemes_batch_009.json  kaggle_schemes_batch_010.json  kaggle_schemes_batch_011.json  kaggle_schemes_batch_012.json  kaggle_schemes_batch_013.json  kaggle_schemes_batch_014.json  kaggle_schemes_batch_015.json  kaggle_schemes_batch_016.json  kaggle_schemes_batch_017.json  kaggle_schemes_batch_018.json  kaggle_schemes_batch_019.json  kaggle_schemes_batch_020.json  kaggle_schemes_batch_021.json  kaggle_schemes_batch_022.json  kaggle_schemes_batch_023.json  kaggle_schemes_batch_024.json  kaggle_schemes_batch_025.json  kaggle_schemes_batch_026.json  kaggle_schemes_batch_027.json  kaggle_schemes_batch_028.json  kaggle_schemes_batch_029.json  kaggle_schemes_batch_030.json  kaggle_schemes_batch_031.json  kaggle_schemes_batch_032.json  kaggle_schemes_batch_033.json  kaggle_schemes_batch_034.json  kaggle_schemes_batch_035.json  kaggle_schemes_batch_036.json  kaggle_schemes_batch_037.json  kaggle_schemes_batch_038.json  (+30 more)
public/: ambiguity-map-anchor-schemes.html  (+1 more)
(+158 files in other folders)
