[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "aiofiles>=23.0",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "cryptography>=43.0",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
offline = [
    "playwright>=1.44",
    "sentence-transformers>=3.0",
    "pypdf>=4.0",
    "pdfplumber>=0.11",
    "pytesseract>=0.3",
    "polars>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "mypy>=1.10",
    "ruff>=0.4",
    "black>=24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/tests/*",
    # Operational / CLI scripts — not part of the matching engine path
    "src/enhance_with_gemini.py",
    "src/gemini_enhancer.py",
    "src/kaggle_parsing_engine.py",
    "src/gazette_monitor.py",
    "src/generate_statistics.py",
    "src/inspect_parsed_schemes.py",
    "src/validation_and_reporting.py",
    # UI interfaces — tested via integration, not unit tests
    "src/conversation/interfaces/cli.py",
    "src/conversation/interfaces/web.py",
]

[tool.coverage.report]
fail_under = 80

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"
